# Pike

./: .autodoc_inlining  .autodoc_keywords  .autodoc_syntax  .autodoc_xml  .build_lobotomized_crypto  .cvsignore  .gitattributes  .gitignore  .how_to_build_from_scratch  .how_to_create_modules  .mailmap  .travis.yml  .zap_real_crypto  ANNOUNCE  CHANGES  COMMITTERS  COMPILING-rntcl  COPYING  COPYRIGHT  Difficult things as beginner  LICENSE  Makefile  Makefile.in  README  README-CVS  README-CVS.txt  README-GIT  README.md  README.txt  `COVILHÃ´.txt  config.h.in  configure  configure.in  init_nt  m  mi  module.pmod.in  multi-cpu.txt  pike_sass.h  sass.cmod  (+3 more)
bundles/patches/nettle-1.12/: Makefile.in  config.make.in  configure  configure.ac
src/: .cvsignore  .gitignore  BUGS  COPYRIGHT  ChangeLog  DISCLAIMER  MANIFEST  Makefile.in  Makefile.in.src  Makefile.src  OCPikeInterpreter.h  OCPikeInterpreter.m  Pike_ui.wxs  README  UnicodeData-ReadMe.txt  UnicodeData.txt  acconfig.h  aclocal.m4  add_efun.c  add_efun.h  alloca.c  apply_low.h  array.c  array.h  backend.c  backend.cmod  backend.h  bignum.c  bignum.h  bignum_type_bits.h  bitvector.h  block_alloc.h  block_alloc_h.h  block_allocator.c  block_allocator.h  buffer.c  buffer.h  build_modlist_h  builtin.cmod  builtin_efuns.c  (+225 more)
src/code/: README.txt  amd64.c  amd64.h  arm.c  arm32.c  arm32.h  arm64.c  arm64.h  bytecode.c  bytecode.h  computedgoto.c  computedgoto.h  ia32.c  ia32.h  ppc32.c  ppc32.h  ppc64.c  ppc64.h  quads.in  riscv.c  riscv.h  sparc.c  sparc.h
src/dtrace/: Pike.instrument  apple_instruments_probe.d  dtrace_probes.d  dtrace_probes_disabled.h
src/gjalloc/: gjalloc.c  gjalloc.h
src/modules/: .autodoc  .cvsignore  .gitignore  Makefile.in  Makefile.src  common_module_makefile.in  configure  configure.in  dynamic_module_makefile.in  efuns.c  module_configure.in  module_dir_marker  module_makefile  semidynamic_module_makefile.in  static_module_makefile.in
src/modules/CommonLog/: .cvsignore  .gitignore  Makefile.in  acconfig.h  clf.c  configure.in  testsuite.in
src/modules/DVB/: .gitignore  Makefile.in  acconfig.h  configure.in  dvb.c  dvb.h  psparser.c
src/modules/FSEvents/: .gitignore  Makefile.in  TODO  configure.in  fsevents.cmod  fseventstest.pike  testsuite.in
src/modules/Fuse/: .cvsignore  .gitignore  Makefile.in  acconfig.h  configure.in  fuse.c  module.pmod.in
src/modules/Gdbm/: .cvsignore  .gitignore  Makefile.in  acconfig.h  configure.in  gdbmmod.c  testsuite.in
src/modules/Gettext/: Makefile.in  acconfig.h  configure.in  gettext.c  testsuite.in
src/modules/Gmp/: .cvsignore  .gitignore  Makefile.in  acconfig.h  configure.in  gmp_machine.h.in  mpf.cmod  mpq.cmod  mpz_glue.c  my_gmp.h  my_mpz_xor.c  next_prime.c  prime_table.c  prime_table.h  prime_table.pike  smpz.c  testsuite.in
src/modules/Gz/: .cvsignore  .gitignore  Makefile.in  acconfig.h  buffertest.pike  configure.in  flushtest.pike  gz_test.c  module.pmod.in  testsuite.in  zlibmod.c
src/modules/HTTPLoop/: .cvsignore  .gitignore  Makefile.in  accept_and_parse.c  accept_and_parse.h  acconfig.h  cache.c  cache.h  configure.in  extensions  filesystem.c  filesystem.h  log.c  log.h  requestobject.c  requestobject.h  static_strings.h  test.pike  testsuite.in  timeout.c  timeout.h  util.c  util.h  wwwserver.pike
src/modules/Image/: .cvsignore  .gitignore  Makefile  Makefile.in  acconfig.h  assembly.h  assembly.s  blit.c  blit_layer_include.h  buggy_testsuite  colors.c  colors.h  colortable.c  colortable.h  colortable_lookup.h  configure.in  corner2.psd  dct.c  default_font.c  doc-footer  doc-header  doc.txt  font.c  illustration.pike  image.c  image.h  image_autodoc_foo  image_module.c  initstuff.h  layer_channel.h  layer_oper.h  layers.c  lzw.c  lzw.h  match.c  match.h  matrix.c  mkdoc.pike  mktests.pike  mkwmml.pike  (+18 more)
src/modules/Inotify/: .gitignore  Makefile.in  acconfig.h  configure.in  inotify.cmod  testsuite.in
src/modules/JSON/: JSON.pmod.in  Makefile.in  Makefile.rl  configure.in  dependencies  json.cmod  json.h  json_array.c  json_array_utf8.c  json_mapping.c  json_mapping_utf8.c  json_number.c  json_number_utf8.c  json_parser.c  json_string.c  json_string_utf8.c  json_utf8.c  testsuite.in
src/modules/Java/: Makefile.in  acconfig.h  configure.in  find_java_home.sh  jvm.c  module.pmod.in  module.pmod.in.in  ntdl.c  testsuite.in
src/modules/Kerberos/: .cvsignore  Makefile.in  acconfig.h  configure.in  kerberos.cmod
src/modules/MIME/: Makefile.in  acconfig.h  configure.in  mime.c  module.pmod.in  testsuite.in
src/modules/MPI/: .gitignore  Makefile.in  acconfig.h  configure.in  mpi.cmod  typed_array.H
src/modules/Math/: .cvsignore  .gitignore  Makefile.in  acconfig.h  configure.in  math.c  math_matrix.c  math_module.c  math_module.h  matrix.c  matrix_code.h  module.pmod.in  testsuite.in  transforms.cmod  transforms.h
src/modules/Mird/: .cvsignore  .gitignore  Makefile.in  acconfig.h  configure.in  mird_glue.c  module.pmod.in  testsuite.in
src/modules/Msql/: .cvsignore  .gitignore  COPYING  ChangeLog  INSTALL  Makefile.in  NOTES  acconfig.h  configure.in  msql_config.h.in  msqlmod.c  msqlmod.cmod  test_msqlmod.pike  version.h
src/modules/Mysql/: .cvsignore  .gitignore  Makefile.in  acconfig.h  configure.in  dummy.c  mysql.c  mysql.cmod  precompiled_mysql.h  result.c  result.cmod
src/modules/Odbc/: .gitignore  Makefile.in  acconfig.h  configure.in  odbc.c  odbc.cmod  odbc_result.c  odbc_result.cmod  precompiled_odbc.h
src/modules/Oracle/: .cvsignore  .gitignore  Makefile.in  acconfig.h  configure.in  module.pmod.in  oracle.c  oracle.cmod
src/modules/PDF/: .cvsignore  .gitignore  Makefile.in  acconfig.h  configure.in  initstuff.h  pdf_machine.h.in  pdf_module.c  pdflib_glue.c  testsuite.in
src/modules/Parser/: .cvsignore  .gitignore  Makefile.in  acconfig.h  c.c  c_tokenizer.h  config.h.in  configure.in  html.c  initstuff.h  module.pmod.in  parser.c  (+8 more)
src/post_modules/: .cvsignore  .gitignore  Makefile.in  configure.in
src/test/: .gitignore  create_testsuite  test_lpc.lpc  test_pike.pike  testsuite  verifymanual.lpc
(+4969 files in other folders)
